[package]
name = "dolphine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
tokio-tungstenite = "*"
# rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "162fafa" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "6778089" }
include_dir = { version = "0.7.3"}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
thiserror = "1.0"
serde = "1.0.152"
serde_json = "1.0.91"
once_cell = "1.16.0"
serde_repr = "0.1"
webbrowser = "0.8.4"